--- a/package.json
+++ b/package.json
@@ -18,8 +18,10 @@
     "react-tabs": "^3.1.1",
     "select-react": "^1.0.9"
   },
+  "proxy": "http://localhost:8000",
   "scripts": {
     "start": "react-scripts start",
+    "dev" : "concurrently \"npm start\" \"cd Backend && npm start\"",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
@@ -38,5 +40,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "concurrently": "^5.2.0"
   }
 }
